--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT=5000
-# MONGODB_URI=mongodb+srv://thehudhaifa:D118Wmdua7ll4WOS@cluster0.fkziltk.mongodb.net/ecommerce_db?
-# retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://hudhaifamuhammedi:6IfxaiOFtxrSRZvf@dbtestcluster.odvqppv.mongodb.net/db_test?retryWrites=true&w=majority&appName=dbTestCluster
 UPSTASH_REDIS_URL=rediss://default:AWNpAAIjcDFlNzRlZGU4ZDZiZmE0ZGMzOTQ0MWI0YWZiZjUyNDI5MnAxMA@trusted-woodcock-25449.upstash.io:6379
 REFRESH_TOKEN_SECRET=refersh_token_secret
 ACCESS_TOKEN_SECRET=access_token_secret
