--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,8 @@
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
+  force = true
+  headers = { Access-Control-Allow-Origin = "*", Access-Control-Allow-Headers = "Authorization, Content-Type, Accept", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS" }
 
 
 [[headers]]
