--- a/netlify.toml
+++ b/netlify.toml
@@ -19,7 +19,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Access-Control-Allow-Origin = "https://mern-ecommerce-store-website.vercel.app, http://localhost:5173"
+    Access-Control-Allow-Origin = "https://mern-ecommerce-website-store.netlify.app, http://localhost:5173"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
     Access-Control-Allow-Headers = "Content-Type, Authorization"
     Access-Control-Allow-Credentials = "true"
